# agent-id-py

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
context/: v1.jsonld
docs/: architecture.md
examples/: quickstart.py
schema/: capability-v1.json
src/agent_id/: __init__.py  keys.py  resolve.py  schema.py  types.py  vc.py
tests/: test_conformance.py  test_issue_verify.py  test_jcs.py  test_keys.py
vectors/: c1-valid.json  c2-mutated.json  c3-didweb.json
