[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-id"
version = "0.1.0"
description = "Self-custody DID + capability VC profile for AI agents (Python port of @p-vbordei/agent-id)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Bordei", email = "bordeivlad@gmail.com" }]
requires-python = ">=3.10"
keywords = [
  "did", "verifiable-credentials", "decentralized-identity",
  "ai-agents", "agent-infrastructure", "ed25519", "eddsa-jcs-2022",
  "self-custody", "did-key", "did-web",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "cryptography>=42.0",
  "jcs>=0.2.1",
  "base58>=2.1",
  "jsonschema>=4.21",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/p-vbordei/agent-id-py"
Reference = "https://github.com/p-vbordei/agent-id"
Issues = "https://github.com/p-vbordei/agent-id-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_id"]

[tool.hatch.build.targets.wheel.force-include]
"schema/capability-v1.json" = "agent_id/_data/schema/capability-v1.json"
"context/v1.jsonld" = "agent_id/_data/context/v1.jsonld"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
